--- a/theme/css/wr.css
+++ b/theme/css/wr.css
@@ -1,20 +1,132 @@
-.content {
+body {
+    background-color: black;
+    font-family: 'Jura', sans-serif;
+}
+
+.bg {
+    position: absolute;
+    top: 0px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url("/img/bg.jpg");
     height: 100vh;
+    width: 100vw;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    z-index: 3;
+}
+
+.faixa {
+    height: 15vh;
+    width: 100vw;
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.932), rgba(255, 255, 255, 0));
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo {
-    background-image: url("/img/logo.jpg");
-    width: 400px;
-    height: 185px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    height: 10vh;
+    width: auto;
+}
+
+.img1 {
+    background-image: linear-gradient(180deg, rgba(0, 0, 109, 0.81), rgba(68, 0, 0, 0.7)), url("../img/bg.jpg");
+    z-index: 1;
+}
+
+.img2 {
+    background-image: linear-gradient(180deg, rgba(0, 0, 109, 0.81), rgba(68, 0, 0, 0.7)), url("../img/bg2.jpg");
+    z-index: 2;
+}
+
+.slogan {
+    font-size: 2em;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+    text-align: center;
+    width: 200px;
+}
+
+.nl {
+    display: flex;
+    width: 80vw;
+    min-height: 50px;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+    background-color: rgba(43, 43, 43, 0.658);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding: 10px;
+    position: absolute;
+    bottom: 0px;
+    opacity: 0;
+}
+
+.wpcf7-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex: 0 0 100%;
+}
+
+.ajax-loader {
+    display: none!important;
+}
+
+.texto-nl {
+    flex: 0 0 30%!important;
+    text-align: center;
+    color: #EEE;
+    text-transform: uppercase;
+}
+
+.wpcf7-form-control-wrap.nome, .wpcf7-form-control-wrap.email {
+    flex: 0 1 40%!important;
+    margin: 10px
+}
+
+.wpcf7-not-valid {
+    border: 2px solid #7a2525!important;
+}
+
+input[type='text'], input[type='email'] {
+    border-radius: 10px!important;
+    border: 0px solid #333;
+    color: #EEE;
+    background-color: rgba(80, 80, 80, 0.658);
+    padding: 10px!important;
+    width: 100%
+}
+
+.submit {
+    flex: 0 0 20%;
+    padding: 10px!important;
+}
+
+input[type='submit'] {
+    border-radius: 10px!important;
+    border: 0px solid #333!important;
+    background-color: rgba(80, 80, 80, 0.658);
+    color: #EEE;
+    padding: 10px!important;
+    font-size: 14px;
+    width: 100%;
+    height: 40px
+}
+
+.wpcf7-not-valid-tip {
+    display: none !important;
+}
+
+.wpcf7-response-output {
+    display: none!important;
+}
+
+.wpcf7 {
+    flex: 0 0 70%;
+    color: #074921
 }
